added help page
Support/Help for users to adminstartor

--- a/PengYou_Version2/app/src/main/AndroidManifest.xml
+++ b/PengYou_Version2/app/src/main/AndroidManifest.xml
@@ -61,10 +61,14 @@
         <activity
             android:name=".InterestPageActivity"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".InterestActivity"
-            android:parentActivityName=".InterestPageActivity"/>
-        <activity android:name=".EventActivity"
-            android:parentActivityName=".InterestActivity"/>
+        <activity
+            android:name=".InterestActivity"
+            android:parentActivityName=".InterestPageActivity" />
+        <activity
+            android:name=".EventActivity"
+            android:parentActivityName=".InterestActivity" />
+        <activity android:name=".HelpActivity"
+            android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
