--- a/PengYou_Version2/app/build.gradle
+++ b/PengYou_Version2/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -39,12 +40,15 @@ dependencies {
     compile 'id.zelory:compressor:2.0.0'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.google.firebase:firebase-messaging:11.8.0'
+
+    //Add google map Library
+    compile 'com.google.android.gms:play-services:11.8.0'
+
     testCompile 'junit:junit:4.12'
 }
 
 
-
-
+apply plugin: 'com.android.application'
 
 
 
