--- a/PengYou_Version2/app/src/main/AndroidManifest.xml
+++ b/PengYou_Version2/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name=".PengYou"
@@ -67,8 +68,15 @@
         <activity
             android:name=".EventActivity"
             android:parentActivityName=".InterestActivity" />
-        <activity android:name=".HelpActivity"
-            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".HelpActivity"
+            android:parentActivityName=".MainActivity" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_place_api" />
+
+        <activity android:name=".ViewHangoutActivity"></activity>
     </application>
 
 </manifest>
