--- a/PengYou_Version2/app/src/main/AndroidManifest.xml
+++ b/PengYou_Version2/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <application
         android:name=".PengYou"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/bunny_app_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -32,7 +32,10 @@
         <activity
             android:name=".RegisterActivity"
             android:parentActivityName=".StartActivity" />
-        <activity android:name=".LoginActivity" />
+
+        <activity android:name=".LoginActivity"
+            android:parentActivityName=".StartActivity" />
+
         <activity android:name=".SettingsActivity" />
         <activity
             android:name=".StatusActivity"
@@ -76,7 +79,8 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_place_api" />
 
-        <activity android:name=".ViewHangoutActivity"></activity>
+        <activity android:name=".ViewHangoutActivity" />
+        <activity android:name=".ForgotpwActivity"></activity>
     </application>
 
 </manifest>
